--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "TemplateWebpackNPM",
+  "name": "Battleship",
   "version": "1.0.0",
   "description": "Template for webpack installed with some useful plugins",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.js",
+    "preformat": "npx eslint --fix ./src",
+    "format": "prettier ./src --write",
+    "test": "jest",
+    "prebuild": "npm run format",
     "build": "webpack --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postbuild": "node ./dist/main.js",
+    "dev": "webpack --config webpack.dev.js",
+    "predev": "npx eslint --fix ./src",
+    "postdev": "prettier ./src --write"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@babel/preset-env": "^7.26.7",
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.20.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
-    "eslint": "^9.19.0",
-    "globals": "^15.14.0",
+    "eslint": "^9.20.1",
+    "globals": "^15.15.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "prettier": "3.4.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
